infra/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: app
  name: app
  namespace: pkgtracker
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    service: app
  type: ClusterIP
