infra/k8s/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: pkgtracker
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
      - pkgtracker.dmartingarcia.name
    secretName: letsencrypt-app-prod
  rules:
  - host: pkgtracker.dmartingarcia.name
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 4000
